chore: logout endpoint implemented
